# priobike-load-service

./: .gitignore  Dockerfile  README.md  dev.env  docker-compose.yml  pyproject.toml  run-dev.sh  run-server.sh
.github/workflows/: publish.yaml
backend/app/: admin.py  apps.py  models.py  urls.py  views.py
backend/app/management/commands/: check_load.py
backend/app/migrations/: 0001_initial.py  0002_bucket_status.py
backend/backend/: settings.py  urls.py  views.py
backend/monitoring/: apps.py  urls.py  views.py
backend/static/: load_response.json
backend/sync/: admin.py  apps.py  models.py  urls.py  views.py
backend/sync/management/commands/: load_debug_buckets.py  startup.py  sync.py
backend/sync/migrations/: 0001_initial.py
manager/: .env  Dockerfile  estimate.py  start.sh
nginx_inner/conf.d/: default.conf
worker/: default.conf  init_fetch.sh
