[tool.poetry]
name = "priobike-load-service"
version = "1.0.0"
description = "A microservice to estimate the load on the PrioBike backend."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.13"
Django = "^5.0.2"
psycopg2 = "^2.2.9"
gunicorn = "^21.2.0"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
