[tool.poetry]
name = "priobike-load-service"
version = "1.0.0"
description = "A microservice to estimate the load on the PrioBike backend."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.7"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
requests = "^2.31.0"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
